# c-compiler

./: .gitignore  9f  CMakeCache.txt  CMakeLists.txt  Makefile  add_llvm.sh  build.cpp  compile.sh  core.cpp  example.txt  group.txt  main.cpp  optimize.sh  prg  test.bc  test.s
config/: debug.cfg  release.cfg
examples/: Makefile  custom.cpp  fac.cpp  main.ll  max.ll  test.ll  test.s
impl_ideas/: README.md
lib/c4lib/: c4lib.c  c4lib.h
lib/googletest/googletest/: README.md
resources/: c.lexer  c.parser  c.translate  math.parser  parser.lexer  simple.parser  test.c
src/: BinaryNode.cpp  BinaryNode.h  InputReader.cpp  InputReader.h  Lexer.h  Queue.cpp  Queue.h  RegExParser.cpp  RegExParser.h  StateMachineBuilder.h  StreamInputReader.h  StringInputReader.h  Token.h  TreeNode.cpp  TreeNode.h  UnaryNode.cpp  UnaryNode.h  ValueNode.cpp  ValueNode.h  build.cpp  c.lexer  common.h  lexer.cpp  lexer.h  main.cpp
src/elements/: Assignment.cpp  Assignment.h  Binary.cpp  Binary.h  Block.cpp  Block.h  Break.cpp  Break.h  Call.cpp  Call.h  Choose.cpp  Choose.h  CompareBinary.cpp  CompareBinary.h  Constant.cpp  Constant.h  Continue.cpp  Continue.h  Declaration.cpp  Declaration.h  Declarator.cpp  Declarator.h  DirectDeclarator.cpp  DirectDeclarator.h  Dumpable.cpp  Dumpable.h  Element.cpp  Element.h  Elements.h  Expression.cpp  Expression.h  GoTo.cpp  GoTo.h  Identifier.cpp  Identifier.h  IdentifierUse.cpp  IdentifierUse.h  If.cpp  If.h  IfSmall.cpp  (+41 more)
src/lexer/: CatchingLexerProxy.cpp  CatchingLexerProxy.h  Error.cpp  Error.h  GeneratedLexer.h  Lexer.cpp  Lexer.h  LexerControl.cpp  LexerControl.h  LexerGenerator.cpp  LexerGenerator.h  LexerGrammar.cpp  LexerGrammar.h  LexerProxy.cpp  LexerProxy.h  Location.cpp  Location.h  StateMachine.cpp  StateMachine.h  StateMachineBuilder.cpp  StateMachineBuilder.h  StateMachineLexer.cpp  StateMachineLexer.h  SymbolCache.cpp  SymbolCache.h  Token.cpp  Token.h  core.h  lexerCore.h
src/optimization/: OptimizeException.h  Optimizer.cpp  Optimizer.h
src/parser/: Closure.cpp  Closure.h  Component.cpp  Component.h  Entity.cpp  Entity.h  Grammar.cpp  Grammar.h  Item.cpp  Item.h  Parser.cpp  Parser.h  ParserGenerator.cpp  ParserGenerator.h  ParserTable.cpp  ParserTable.h  PrettyPrinter.cpp  PrettyPrinter.h  PrettyVisitor.cpp  PrettyVisitor.h  Rule.cpp  Rule.h  SimpleObjects.cpp  SimpleObjects.h  SimpleParser.cpp  SimpleParser.h  TypeDefines.h  Visitor.cpp  Visitor.h  core.cpp  core.h  parserCore.h
src/reader/: FileInputReader.cpp  FileInputReader.h  InputReader.cpp  InputReader.h  StreamInputReader.cpp  StreamInputReader.h  StringInputReader.cpp  StringInputReader.h
src/semantic/: Anchor.cpp  Anchor.h  CheckSemantic.cpp  CheckSemantic.h  Identifier.cpp  Identifier.h  Scope.cpp  Scope.h  SemanticException.cpp  SemanticException.h
src/transform/: TransformContext.cpp  TransformContext.h  TransformException.cpp  TransformException.h
src/transformer/: ParserCodeGenerator.cpp  ParserCodeGenerator.h
src/types/: ComplexType.cpp  ComplexType.h  MethodType.cpp  MethodType.h  PendingSemanticStructType.cpp  PendingSemanticStructType.h  PendingSuperStructType.cpp  PendingSuperStructType.h  PointerType.cpp  PointerType.h  ProxyType.cpp  ProxyType.h  SemanticStructType.cpp  SemanticStructType.h  SemanticType.cpp  SemanticType.h  SimpleType.cpp  SimpleType.h  SuperStructType.cpp  SuperStructType.h  SuperType.cpp  SuperType.h  TypeDefines.h  Types.cpp  Types.h
src/utils/: Comparable.cpp  Comparable.h  PrintUtils.h
test/: test.c  test2.c
tests/: FirstTest.h  main.cpp
tests/backend/input/: biggestNumber.c  bubbleSort.c  factorial.c  functionPointerBubbleSort.c  functionPtr.c  incrementNested.c  linkedList.c  mixed.c  negate.c  ptrDiff.c  qsort.c  quickSort.c  reverseString.c  sizeof.c  sizeof2.c  sort.c  structBubbleSort.c  structsInDiffScope.c  structsNestedScopes.c  swappedArrayAccess.c
tests/backend/output/: biggestNumber.c  bubbleSort.c  factorial.txt  functionPointerBubbleSort.c  linkedList.txt  mixed.txt  negate.c  qsort.c  reverseString.c  sizeof.txt  sizeof2.c  sort.txt  structBubbleSort.c  structsInDiffScope.c  structsNestedScopes.c
tests/lexer/error/: comment.output
tests/lexer/input/: all_punctuators.input  character_escape_sequence.input  comment_multiline_in_single_line.input  comment_with_slash.input  comments.input  example_from_sheet_1.input  example_main.input  full_grammar_test.input  grammar_test_no_multi_decl.input  linebreak.input  tokens_seperated_by_comment.input
tests/lexer/output/: all_punctuators.output  character_escape_sequence.output  comment_multiline_in_single_line.output  comment_with_slash.output  comments.output  example_from_sheet_1.output  example_main.output  full_grammar_test.output  linebreak.output  (+2 more)
(+106 files in other folders)
